Week_2-High-Availability,Scalability,and-Core-DevOps-Practices/security_group.tf
# EC2 Security Group
resource "aws_security_group" "Webapplication_security" {
  name = "Security Webapplication_security"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
